_sass/minimal-light.scss
@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');

body {
  background-color: #fff;
  padding: 0px;
  font: 16.0px/1.5 Crimson Pro, serif;
  color: #595959;
  font-weight: 400;
  margin: 0
}

.pub-row {
  display: flex;
  align-items: center;
}

a.no-color {
  color: unset !important;
}

.social-icons a {
  display: inline-block;
  height: 2.4rem;
  width: 2.4rem;
  background-color: transparent;
  color: #57068c !important;
  border-radius: 100%;
  text-align: center;
  font-size: 1.15rem;
  line-height: 0rem;
  margin-right: 1rem
}

@media (prefers-color-scheme: dark) {
  .social-icons a {
    color: #b8b8b8 !important;
  }
}

.social-icons a:last-child {
  margin-right: 0
}

.social-icons a:hover {
  background-color: transparent;
  color: transparent;
  transform: scale(1.3)
}

/*
    .social-icons a:after {
        content: '';
        display: block;
        margin: 0px;
        height: 1px;
        width: 0px;
        background: transparent;
        transition: width .5s ease, background-color .5s ease;
      }
      .social-icons a:hover:after {
        width: 100%;
        background: #337ab7;
      }
     */

@media (prefers-color-scheme: dark) {
  .social-icons a:last-child {
    margin-right: 0
  }

  .social-icons a:hover {
    background-color: transparent;
    color: black;
    transform: scale(1.2)
  }

  /*
    .social-icons a:after {
        content: '';
        display: block;
        margin: 0px;
        height: 1px;
        width: 0px;
        background: transparent;
        transition: width .5s ease, background-color .5s ease;
      }
      
    .social-icons a:hover:after {
        width: 100%;
        background: #a0b0ff;
      }
    */
}

.icon-button {
  background-color: white;
  border-radius: 3.6rem;
  cursor: pointer;
  display: inline-block;
  font-size: 2.0rem;
  height: 3.6rem;
  line-height: 3.6rem;
  margin: 0 5px;
  position: relative;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 3.6rem
}

.icon-button span {
  border-radius: 0;
  display: block;
  height: 0;
  left: 50%;
  margin: 0;
  position: absolute;
  top: 50%;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  width: 0
}

.icon-button:hover span {
  width: 3.6rem;
  height: 3.6rem;
  border-radius: 3.6rem;
  margin: -1.8rem
}

.twitter span {
  background-color: #4099ff
}

.facebook span {
  background-color: #4286f4
}

.linkedin span {
  background-color: #0077B5
}

.github span {
  background-color: #000
}

email {
  font-size: 14px;
  font-family: "Ubuntu Mono";
}

.icon-button i {
  background: none;
  color: white;
  height: 3.6rem;
  left: 0;
  line-height: 3.6rem;
  position: absolute;
  top: 0;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.6rem;
  z-index: 10
}

.icon-button .icon-twitter {
  color: #4099ff
}

.icon-button .icon-facebook {
  color: #4286f4
}

.icon-button .icon-github {
  color: #000;
}

.icon-button .icon-linkedin {
  color: #0077B5
}

.icon-button:hover .icon-twitter,
.icon-button:hover .icon-facebook,
.icon-button:hover .icon-github,
.icon-button:hover .icon-linkedin {
  color: white
}

// autocolor {
//   color: #595959;
// }

autocolor {
  color: #57068c;
}

lightonly {
  visibility: visible;
}

darkonly {
  visibility: hidden;
}

education {
  font-weight: 500;
  font-size: 115%;
}

papertitle {
  font-weight: 600;
  font-size: 100%;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #404040;
    color: #eee6f3;
  }

  autocolor {
    color: #ab82c5;
  }

  lightonly {
    visibility: hidden;
  }

  darkonly {
    visibility: visible;
  }

  papertitle {
    color: #eeeff0;
  }

}


.image {
  border-radius: 0.35em;
  border: 0;
  display: inline-block;
  position: relative;
}

.image:before {
  -moz-transition: opacity 0.2s ease-in-out;
  -webkit-transition: opacity 0.2s ease-in-out;
  -ms-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  border-radius: 0.35em;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  opacity: 0.5;
  position: absolute;
  top: 0;
  width: 100%;
}

// .image.avatar {
//   border-radius: 0%;
// }


.image.avatar:before {
  display: none;
}

.image.avatar img {
  border-radius: 50%;
  width: 80%;
  padding: 0;
  border: 3px solid transparent;
  background: linear-gradient(#fff, #fff) padding-box,
              linear-gradient(135deg, #57068c, #ab82c5) border-box;
  box-shadow: 0 4px 24px rgba(87, 6, 140, 0.22), 0 0 0 6px rgba(87, 6, 140, 0.07);
}

.image.logo img {
  border-radius: 0%;
  width: 100%;
  padding: 50px;
  // border: 2px solid #ddd;
  opacity: 0.5;
  padding: 10px;
  box-shadow: 0 0px 0px 0px rgba(200, 200, 200, 0.3);
  margin-left: -8px;
  margin-top: -58px;
  margin-bottom: -10px;
}



#header .image.avatar {
  margin: 0 0 em 0;
  width: 8.00em;
}

// #header .image.logo {
//   margin: 0 0 em 0;
//   width: 8.00em;
// }

h3 {
  font-weight: 400;
  color: #000;
  margin: 0 0 0px;
}

h4 {
  font-weight: 400;
  color: #545353;
  margin: 0 0 5px;
}


h5,
h6 {
  font-weight: 600;
  color: #404040;
  margin: 0 0 20px;
}

h1 {
  font-weight: 500;
  color: #000000;
  margin: 0 0 8px;
}

h2 {
  color: #000000;
  font-weight: 500;
  margin: 2px 0px 15px;
  font-size: 157%;
}

@media (prefers-color-scheme: dark) {

  h1,
  h3 {
    font-weight: 300;
    color: #fff;
    margin: 0 0 20px;
  }

  h4 {
    font-weight: 400;
    color: #d6d6d6;
    margin: 0 0 5px;
  }

  h5,
  h6 {
    color: #d6d6d6;
  }

  h2 {
    color: #d6d6d6;
  }

  email {
    font-size: 14px;
    color: #d6d6d6;
    font-family: "Ubuntu Mono";
  }
}

p,
ul,
ol,
table,
pre,
dl {
  margin: 0 0 20px;
}
/* ... */

